@@ -10,6 +10,7 @@
     * Added size and date attributes to api/logs GET endpoint
     * Removed m_time file attribute
     * Added restriction for forbidden characters in uploaded file name
+    * Added download and basic upload info to link-info page
 
 0.5.1 (2021-07-16)
     * Implementation of print after upload endpoint
